# SomeGame

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  default.cfg
Data/: MountList.txt
Data/Config/: System.xml
Data/Materials/: UnlitGeneric.mat
Data/Shaders/: PointSprite.frag  PointSprite.vert  PointStar.frag  PointStar.vert  SimpleText.frag  SimpleText.vert  TerrainHeight.frag  TerrainHeight.vert  UnlitGeneric.frag  UnlitGeneric.vert
Launcher/: Launcher.pro  launcher.cpp  launcher.h  launcher.ui  main.cpp  videomode.h
Source/: main.cpp  messagebox.h
Source/Base/: BinaryMesh.cpp  BinaryMesh.h  Exceptions.cpp  Exceptions.h  GL.cpp  GL.h  GL.inl  Messagebox.h  NumberGenerator.cpp  NumberGenerator.h  SharedTypes.h
Source/Base/Entity/: Entity.cpp  Entity.h  MeshEntity.cpp  MeshEntity.h  TransformEntity.cpp  TransformEntity.h
Source/Base/Filesystem/: File.cpp  File.h  Filesystem.cpp  Filesystem.h
Source/Base/System/: AppMain.cpp  Application.cpp  Application.h  InputArray.h  Messagebox.h  Window.cpp  Window.h  Window_SDL.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Base/: Application.cpp  Application.h  BinaryMesh.cpp  BinaryMesh.h  BinaryTexture.cpp  BinaryTexture.h  Entity.cpp  Entity.h  Entity.inl  Exceptions.cpp  Exceptions.h  InputArray.cpp  InputArray.h  NumberGenerator.cpp  NumberGenerator.h  OptionParser.cpp  OptionParser.h  SharedTypes.h
Source/Engine/Base/Types/: MeshFile.cpp  MeshFile.h  Shared.h  TextureFile.cpp  TextureFile.h
Source/Engine/Base/XML/: Document.cpp  Document.h  Node.cpp  Node.h
Source/Engine/Components/: BaseComponent.h  CameraComponent.h  MeshComponent.h  PhysicsComponent.h  SceneComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Engine/Entity/: Camera.cpp  Camera.h  DrawableEntity.cpp  DrawableEntity.h  Entity.cpp  Entity.h  MeshEntity.cpp  MeshEntity.h  RootEntity.cpp  RootEntity.h  TransformEntity.cpp  TransformEntity.h
Source/Engine/Filesystem/: File.cpp  File.h  Filesystem.cpp  Filesystem.dox  Filesystem.h  Resource.cpp  Resource.h
Source/Engine/GUI/: BitmapText.cpp  BitmapText.h  Canvas.cpp  Canvas.h  Console.cpp  Console.h
Source/Engine/GUI/Primitives/: GUIDrawable.cpp  GUIDrawable.h  Image.h  Rectangle.cpp  Rectangle.h  Shape.h  TextString.cpp  TextString.h
Source/Engine/GUI/Text/: BitmapFont.cpp  BitmapFont.h  Font.cpp  Font.h  Glyph.cpp  Glyph.h  TrueTypeFont.cpp  TrueTypeFont.h
Source/Engine/OpenGL/: GL.cpp
Source/Engine/Render/: API.cpp  API.h  Camera.cpp  Camera.h  ContextObject.cpp  ContextObject.h  Render.dox  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture2DRect.cpp  Texture2DRect.h  TextureRect.cpp  TextureRect.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Viewport.cpp  Viewport.h
Source/Engine/Render/OpenGL/: Enums.hpp  Functions.c  Functions.cpp  Functions.h  Functions.hpp
Source/Engine/System/: Application.cpp  Application.h  Input.cpp  Input.h  Macros.h  Messagebox.cpp  Messagebox.h  Profiling.cpp  Profiling.h  Time.cpp  Time.h  Window.cpp  Window.h
Source/Entities/: Camera.cpp  Camera.h  PlayerController.cpp  PlayerController.h  StaticModel.cpp  StaticModel.h  TerrainManager.cpp  TerrainManager.h
Source/GUI/: BitmapText.cpp  BitmapText.h
Source/Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Source/Game/Entities/: PlayerController.cpp  PlayerController.h  SpaceObject.cpp  SpaceObject.h  StaticModel.cpp  StaticModel.h  TerrainManager.cpp  TerrainManager.h
Source/Game/Terrain/: TestTerrain.cpp  TestTerrain.h  Tile.cpp  Tile.h  Worker.cpp  Worker.h
Source/Game/Universe/: Generator.cpp  Generator.h  Manager.cpp  Manager.h  Renderer.cpp  Renderer.h  UniverseManager.cpp  UniverseManager.h  UniverseRegion.cpp  UniverseRegion.h
Source/Import/: BaseMeshImporter.cpp  BaseMeshImporter.h  GenericAssimp.cpp  GenericAssimp.h  WavefrontObj.cpp  WavefrontObj.h
Source/Render/: BitmapText.cpp  BitmapText.h  Camera.cpp  Camera.h  Scene.h  TestTerrain.cpp  TestTerrain.h  WorldModel.cpp  WorldModel.h
Source/Terrain/: TestTerrain.cpp  Tile.h  Worker.cpp  Worker.h
Source/Tools/: CMakeLists.txt  Importer.cpp
Source/Tools/Import/: BaseMeshImporter.cpp  BaseMeshImporter.h  GenericAssimp.cpp  GenericAssimp.h
Tools/: AppMain.cpp  ResourceConverter.cpp  ResourceConverter.h  ResourceConverter.ui  ShaderViewer.cpp  ShaderViewer.h  ShaderViewer.ui  ToolWindow.cpp  ToolWindow.h  ToolWindow.ui  ToolsWindow.cpp  ToolsWindow.h  ToolsWindow.ui  dll_main.cpp
Tools/DataZipper/: DataZipper.cpp  DataZipper.h  DataZipper.ui
Tools/ResourceConverter/: ResourceConverter.cpp  ResourceConverter.h  ResourceConverter.ui
Tools/ShaderViewer/: ShaderGLWidget.cpp  ShaderGLWidget.h  ShaderViewer.cpp  ShaderViewer.h  ShaderViewer.ui
Tools/ShaderViewer/Widgets/: ShaderGLWidget.cpp  ShaderGLWidget.h
content/: unlitGeneric.frag  unlitGeneric.vert
src/: configfile.h  cube.cpp  filesystem.cpp  filesystem.h  main.cpp  messagebox.h
src/ext/: gl_core_3_3.cpp  gl_core_3_3.hpp
src/importers/: meshimporter.cpp  meshimporter.h  wavefrontobj.cpp  wavefrontobj.h
