cmake_minimum_required(VERSION 2.8.11)
project(Engine)
file(GLOB_RECURSE SOURCE_LIST "./*.cpp" "./*.c" "./*.inl" "./*.h")
include_directories("../")
if(MSVC)
    add_library(${PROJECT_NAME} STATIC ${SOURCE_LIST})
else()
    add_library(${PROJECT_NAME} SHARED ${SOURCE_LIST})
endif()
target_link_libraries(${PROJECT_NAME} ${LIBS})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
